<resources>
    <string name="app_name">When</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Welcome Slider labels and text -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Welcome to When!</string>
    <string name="slide_1_desc">The quick and easy way to keep track of your tasks!</string>
    <string name="slide_2_title">Keep track of multiple tasks</string>
    <string name="slide_2_desc">Add a task by pressing the +</string>
    <string name="slide_3_title">Swipe to manage tasks</string>
    <string name="slide_3_desc">Reset a task by swiping to the right.\nDelete by swiping to the left.</string>
    <string name="slide_4_title">Placeholder</string>
    <string name="slide_4_desc">Mark my words, something useful will be here eventually.</string>


    <string name="title_activity_profile">Profile</string>
    <string name="add_item">Add Task</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="when_logo_content_description">When Logo</string>
    <string name="pref_header_about">About When</string>
    <string name="application_version_title">Application version</string>
    <string name="operating_system_title">Operating system</string>
    <string name="legal_information_title">Legal information</string>
    <string name="legal_information_summary">Copyright 2017 AKP Web Design. All rights reserved.</string>
    <string name="operating_system_summary">Unknown</string>
    <string name="application_version_summary">Unknown</string>
    <string name="text_copied">Text copied!</string>
    <string name="smiley">😃  ❤  😍  😘  😻️</string>
    <string name="more_information_title">More information</string>
    <string name="more_information_uri">https://when.akpmakes.tech/</string>
	<string name="privacy_policy_title">Terms of Service / Privacy Policy</string>
    <string name="privacy_policy_uri">https://when.akpmakes.tech/privacy.html</string>
    <string name="social_discord_title">Discord</string>
    <string name="social_discord_summary">Join us on Discord</string>
    <string name="social_discord_uri">https://discord.gg/9GpztdT</string>
    <string name="social_github_title">GitHub</string>
    <string name="social_github_summary">When is Open Source! Check out the code on GitHub!</string>
    <string name="social_github_uri">https://github.com/WhenApp/WhenApp-Android/tree/%1$s</string>
    <string name="welcome_screen_title">Welcome screen</string>
    <string name="rate_title">Rate When</string>
    <string name="rate_summary"></string>
    <string name="sign_in_failure">Sign in failed. You may experience problems saving data if this issue persists.</string>
    <string name="task_name_label">Task Name</string>
    <string name="task_time">Task Time</string>
    <string name="save_task_label">Save Task</string>
    <string name="task_date_placeholder">00/00/0000</string>
    <string name="task_time_placeholder">00:00:00</string>
    <string name="use_current_time">Use current time</string>

    <string name="snackbar_task_reset">Task reset successfully!</string>
    <string name="snackbar_task_deleted">Task deleted successfully!</string>
    <string name="snackbar_undo_action">UNDO</string>
    <string name="snackbar_save_success">Task saved successfully!</string>
    <string name="snackbar_save_error">Your task could not be saved. Please try again.</string>
    <string name="snackbar_save_error_name">Your task could not be saved. Task name is required.</string>

    <string name="day_title">Start of the week</string>
    <string-array name="day_units">
        <item>default</item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="_default">default</string>
    <string name="day_1">Sunday</string>
    <string name="day_2">Monday</string>
    <string name="day_3">Tuesday</string>
    <string name="day_4">Wednesday</string>
    <string name="day_5">Thursday</string>
    <string name="day_6">Friday</string>
    <string name="day_7">Saturday</string>

    <!-- Crashlytics strings -->
    <string name="com.crashlytics.CrashSubmissionPromptTitle">Houston, we have a problem</string>
    <string name="com.crashlytics.CrashSubmissionPromptMessage">This is embarrassing! Please help us fix the problem by sending a crash report.</string>
    <string name="com.crashlytics.CrashSubmissionSendTitle">Send</string>
    <string name="com.crashlytics.CrashSubmissionAlwaysSendTitle">Always Send</string>
    <string name="com.crashlytics.CrashSubmissionCancelTitle">Don\'t Send</string>
    <!-- END Crashlytics strings -->
</resources>
